feat: Release v1.0.16 - Tool Search, Multi-tab Viewer, and UI Polish

--- a/src/renderer/i18n/locales/en.json
+++ b/src/renderer/i18n/locales/en.json
@@ -46,6 +46,15 @@
     "offline": "Offline",
     "online": "Online"
   },
+  "tabs": {
+    "untitled": "Untitled",
+    "closeTab": "Close tab",
+    "newTab": "Open new file",
+    "unsavedChanges": "Unsaved changes",
+    "unsavedChangesConfirm": "This document has unsaved changes. Are you sure you want to close it?",
+    "tabLimitWarning": "Maximum 10 tabs. Close some tabs to open more.",
+    "duplicateFile": "This file is already open in another tab"
+  },
   "landing": {
     "uploadTitle": "Upload PDF",
     "uploadHint": "Drag and drop your file here, or click to browse.",
@@ -59,7 +68,10 @@
     "imagesToPdf": "Images to PDF",
     "imagesToPdfDesc": "JPG, PNG to PDF",
     "bulkEncrypt": "Bulk Encrypt",
-    "bulkEncryptDesc": "Protect multiple files"
+    "bulkEncryptDesc": "Protect multiple files",
+    "webpageToPdf": "Webpage to PDF",
+    "webpageToPdfDesc": "Convert any URL to PDF",
+    "allTools": "All PDF Tools"
   },
   "menu": {
     "file": "File",
@@ -78,7 +90,9 @@
     "edit": "Edit",
     "page": "Page",
     "tools": "Tools",
-    "view": "View"
+    "view": "View",
+    "minimize": "Minimize Ribbon",
+    "expand": "Expand Ribbon"
   },
   "toolbar": {
     "zoomIn": "Zoom In",
@@ -122,6 +136,10 @@
     "compress": "Compress PDF",
     "encrypt": "Encrypt PDF",
     "decrypt": "Decrypt PDF",
+    "unlockPDF": "Unlock PDF",
+    "webOptimize": "Web Optimize",
+    "overlay": "Overlay PDF",
+    "webpageToPdf": "Webpage to PDF",
     "watermark": "Add Watermark",
     "rotate": "Rotate Pages",
     "delete": "Delete Pages",
@@ -131,15 +149,23 @@
     "ocr": "OCR - Extract Text",
     "convert": "Convert",
     "exportImages": "Export as Images",
+    "extractImages": "Extract Images",
     "importImages": "Import from Images",
     "officeToPdf": "Office to PDF",
     "bulkEncrypt": "Bulk Encrypt",
     "sign": "Sign PDF",
     "viewSignatures": "View Signatures",
+    "addPageNumbers": "Add Page Numbers",
     "forms": "Forms",
     "annotations": "Annotations",
     "batch": "Batch Operations",
-    "plugins": "Plugin Manager"
+    "plugins": "Plugin Manager",
+    "searchPlaceholder": "Search tools...",
+    "search": "Search",
+    "noResults": "No tools found matching \"{{query}}\"",
+    "requiresDocument": "Open PDF first",
+    "searchHint": "Press Ctrl+K to open this search anytime",
+    "pdfToWord": "PDF to Word/Excel"
   },
   "merge": {
     "title": "Merge PDFs",
@@ -184,6 +210,125 @@
     "encryptButton": "Encrypt PDF",
     "success": "PDF encrypted successfully"
   },
+  "pdfPassword": {
+    "title": "Password Required",
+    "description": "This PDF is password protected",
+    "password": "Password",
+    "enterPassword": "Enter password to open this PDF",
+    "open": "Open PDF",
+    "wrongPassword": "Wrong password. Please try again."
+  },
+  "unlockPDF": {
+    "title": "Unlock PDF",
+    "description": "Remove password protection from PDF",
+    "password": "PDF Password",
+    "enterPassword": "Enter the PDF password",
+    "passwordRequired": "Password is required",
+    "wrongPassword": "Wrong password or PDF is not encrypted",
+    "unlock": "Unlock PDF",
+    "unlocking": "Unlocking...",
+    "info": "This will create a new PDF file without password protection",
+    "warning": "Make sure you have permission to unlock this PDF",
+    "success": "PDF unlocked successfully"
+  },
+  "webOptimize": {
+    "title": "Web Optimize PDF",
+    "description": "Compress and optimize PDF for web viewing",
+    "quality": "Quality Level",
+    "screen": "Screen",
+    "screenDesc": "72 DPI - Smallest file size, web viewing",
+    "ebook": "eBook",
+    "ebookDesc": "150 DPI - Good balance, digital reading",
+    "printer": "Printer",
+    "printerDesc": "300 DPI - High quality printing",
+    "prepress": "Prepress",
+    "prepressDesc": "300 DPI - Professional printing, largest",
+    "optimize": "Optimize PDF",
+    "optimizing": "Optimizing...",
+    "info": "Uses Ghostscript to compress images and optimize PDF structure for faster web loading",
+    "success": "PDF optimized successfully!",
+    "originalSize": "Original size",
+    "newSize": "New size",
+    "savings": "Reduced by {{percent}}%"
+  },
+  "overlay": {
+    "title": "Overlay PDF",
+    "description": "Overlay one PDF on top of another (watermark, letterhead)",
+    "overlayFile": "Overlay PDF File",
+    "selectFile": "Select PDF",
+    "noFileSelected": "No file selected",
+    "noOverlayFile": "Please select an overlay PDF file",
+    "fileHint": "Select a PDF file to overlay (e.g., watermark, letterhead)",
+    "fileHintWithImage": "Supports PDF and images (PNG, JPG) for overlay",
+    "imagePositionLabel": "Image Position",
+    "positionTop": "Header",
+    "positionBottom": "Footer",
+    "positionCenter": "Center",
+    "positionFull": "Full Page",
+    "position": "Overlay Position",
+    "foreground": "Foreground",
+    "foregroundDesc": "Overlay appears on top of content",
+    "background": "Background",
+    "backgroundDesc": "Overlay appears behind content",
+    "applyTo": "Apply to Pages",
+    "allPages": "All Pages",
+    "firstPage": "First Page Only",
+    "lastPage": "Last Page Only",
+    "customPages": "Custom Pages",
+    "opacity": "Opacity",
+    "info": "The overlay PDF will be scaled to fit each page",
+    "apply": "Apply Overlay",
+    "processing": "Processing..."
+  },
+  "webpageToPdf": {
+    "title": "Webpage to PDF",
+    "description": "Convert any webpage to a PDF document",
+    "urlLabel": "Website URL",
+    "urlPlaceholder": "https://example.com",
+    "pageSize": "Page Size",
+    "orientation": "Orientation",
+    "portrait": "Portrait",
+    "landscape": "Landscape",
+    "margins": "Margins",
+    "marginsNone": "None",
+    "marginsMinimal": "Minimal",
+    "marginsNormal": "Normal",
+    "includeBackground": "Include background graphics and colors",
+    "loading": "Loading webpage...",
+    "converting": "Converting to PDF...",
+    "success": "PDF created successfully!",
+    "error": "Failed to convert webpage",
+    "errorEmptyUrl": "Please enter a URL",
+    "convert": "Convert to PDF",
+    "info": "The webpage will be loaded and rendered before converting to PDF. This may take a few seconds."
+  },
+  "convertDialog": {
+    "title": "Convert PDF",
+    "selectFormat": "Select output format:",
+    "selectMethod": "Select conversion method:",
+    "quickMethod": "Quick Method (Built-in)",
+    "quickMethodDesc": "Basic result, no installation needed",
+    "qualityMethod": "High Quality (LibreOffice)",
+    "qualityMethodDesc": "Professional results with preserved layout",
+    "installLibreOffice": "Install LibreOffice",
+    "libreOfficeNotInstalled": "LibreOffice not installed",
+    "note": "Note:",
+    "noteQuick": "Quick method is suitable for simple text PDFs. Complex formatting may be lost.",
+    "noteQuality": "LibreOffice provides best results for documents with complex layouts.",
+    "convertTo": "Convert to {{format}}",
+    "processing": "Processing...",
+    "success": "Conversion Successful!",
+    "successDescQuick": "{{count}} pages converted to {{format}}",
+    "successDescQuality": "File successfully converted to {{format}}",
+    "download": "Download",
+    "openFolder": "Open Folder",
+    "convertAgain": "Convert Again",
+    "failed": "Conversion Failed",
+    "tryAgain": "Try Again",
+    "noFile": "No PDF selected",
+    "sendingToLo": "Sending to LibreOffice...",
+    "finished": "Finished!"
+  },
   "watermark": {
     "title": "Add Watermark",
     "description": "Add text or image watermark",
@@ -197,6 +342,45 @@
     "color": "Color",
     "applyButton": "Apply Watermark",
     "success": "Watermark applied successfully"
+  },
+  "addPageNumbers": {
+    "title": "Add Page Numbers",
+    "description": "Add page numbers to your PDF",
+    "position": "Position",
+    "format": "Number Format",
+    "formatNumbers": "Numbers",
+    "formatPageOfTotal": "Page X of Y",
+    "formatRoman": "Roman Numerals",
+    "formatLetters": "Letters",
+    "startNumber": "Starting Number",
+    "fontSize": "Font Size",
+    "margin": "Margin",
+    "pageRange": "Page Range",
+    "allPages": "All Pages",
+    "customRange": "Custom Range",
+    "preview": "Preview",
+    "apply": "Add Numbers",
+    "processing": "Adding...",
+    "error": "Failed to add page numbers",
+    "success": "Page numbers added successfully"
+  },
+  "extractImages": {
+    "title": "Extract Images from PDF",
+    "description": "Extract all images from the PDF document",
+    "format": "Output Format",
+    "lossless": "Lossless quality",
+    "smaller": "Smaller size",
+    "betterQuality": "Better quality",
+    "quality": "JPEG Quality",
+    "minSize": "Minimum Image Size",
+    "minWidth": "Min Width",
+    "minHeight": "Min Height",
+    "minSizeHint": "Only extract images larger than this size",
+    "info": "Images will be saved to your Downloads folder",
+    "extract": "Extract Images",
+    "extracting": "Extracting...",
+    "success": "Successfully extracted {{count}} image(s)",
+    "error": "Failed to extract images"
   },
   "ocr": {
     "title": "OCR - Extract Text",
@@ -419,10 +603,10 @@
     "escape": "Close/Cancel"
   },
   "print": {
-    "preparing": "Preparing PDF for printing...",
-    "preparingDescription": "Please wait while we prepare your document",
+    "preparing": "Opening PDF for printing...",
+    "preparingDescription": "Please wait while we open the PDF in your browser",
     "opened": "PDF opened in browser",
-    "openedDescription": "You can now print using the browser's print dialog (usually Ctrl+P)",
+    "openedDescription": "You can now preview and print the document using Ctrl+P",
     "failed": "Failed to open PDF",
     "failedDescription": "Failed to prepare PDF for printing"
   },
@@ -575,6 +759,12 @@
         "description": "Use collections, tags, and favorites to organize your PDF library efficiently."
       }
     }
+  },
+  "updateCheck": {
+    "failed": "Failed to check for updates:\n{{error}}",
+    "available": "New version available!\n\nCurrent: {{current}}\nLatest: {{latest}}\n\nClick OK to download.",
+    "upToDate": "You're up to date!\n\nVersion: {{current}}",
+    "error": "Error checking for updates:\n{{error}}"
   }
 }
 
