--- a/src/renderer/i18n/locales/id.json
+++ b/src/renderer/i18n/locales/id.json
@@ -46,6 +46,15 @@
     "offline": "Offline",
     "online": "Online"
   },
+  "tabs": {
+    "untitled": "Tanpa Judul",
+    "closeTab": "Tutup tab",
+    "newTab": "Buka file baru",
+    "unsavedChanges": "Perubahan belum disimpan",
+    "unsavedChangesConfirm": "Dokumen ini memiliki perubahan yang belum disimpan. Yakin ingin menutupnya?",
+    "tabLimitWarning": "Maksimum 10 tab. Tutup beberapa tab untuk membuka lebih banyak.",
+    "duplicateFile": "File ini sudah dibuka di tab lain"
+  },
   "landing": {
     "uploadTitle": "Unggah PDF",
     "uploadHint": "Seret dan lepas file di sini, atau klik untuk memilih.",
@@ -53,13 +62,54 @@
     "recentFiles": "File Terbaru",
     "quickActions": "Aksi Cepat",
     "officeToPdf": "Office ke PDF",
-    "officeToPdfDesc": "Konversi Docx, Xlsx",
+    "officeToPdfDesc": "Konversi Word, Excel, PowerPoint",
     "mergePdfs": "Gabung PDF",
-    "mergePdfsDesc": "Gabungkan file",
+    "mergePdfsDesc": "Gabungkan banyak file PDF jadi satu",
     "imagesToPdf": "Gambar ke PDF",
-    "imagesToPdfDesc": "JPG, PNG ke PDF",
+    "imagesToPdfDesc": "Konversi JPG, PNG ke PDF",
     "bulkEncrypt": "Enkripsi Massal",
-    "bulkEncryptDesc": "Lindungi banyak file"
+    "bulkEncryptDesc": "Lindungi banyak file sekaligus",
+    "webpageToPdf": "Web ke PDF",
+    "webpageToPdfDesc": "Konversi halaman web ke PDF",
+    "allTools": "Semua Alat PDF",
+    "pdfToWord": "PDF ke Word",
+    "pdfToWordDesc": "Konversi PDF ke Word (.docx)",
+    "pdfToExcel": "PDF ke Excel",
+    "pdfToExcelDesc": "Konversi tabel PDF ke Excel (.xlsx)",
+    "extractImages": "Ekstrak Gambar",
+    "extractImagesDesc": "Ambil semua gambar dari PDF",
+    "splitPdf": "Pisah PDF",
+    "splitPdfDesc": "Pisah file PDF menjadi beberapa bagian",
+    "rotate": "Putar Halaman",
+    "rotateDesc": "Putar orientasi halaman PDF",
+    "reorder": "Susun Ulang",
+    "reorderDesc": "Ubah urutan halaman PDF",
+    "deletePages": "Hapus Halaman",
+    "deletePagesDesc": "Hapus halaman yang tidak diinginkan",
+    "extractPages": "Ekstrak Halaman",
+    "extractPagesDesc": "Ambil halaman tertentu jadi PDF baru",
+    "duplicatePage": "Duplikat Halaman",
+    "duplicatePageDesc": "Salin halaman tertentu",
+    "compress": "Kompres PDF",
+    "compressDesc": "Kurangi ukuran file PDF",
+    "overlay": "Overlay PDF",
+    "overlayDesc": "Tambah watermark/kop surat",
+    "addPageNumbers": "Nomor Halaman",
+    "addPageNumbersDesc": "Tambah penomoran halaman",
+    "ocr": "OCR PDF",
+    "ocrDesc": "Buat teks PDF dapat dicari/disalin",
+    "encrypt": "Proteksi PDF",
+    "encryptDesc": "Beri password pada PDF",
+    "unlock": "Buka Kunci PDF",
+    "unlockDesc": "Hapus password PDF",
+    "sign": "Tanda Tangan",
+    "signDesc": "Beri tanda tangan digital",
+    "watermark": "Watermark",
+    "watermarkDesc": "Tambah teks/gambar watermark",
+    "categoryConvert": "Konversi",
+    "categoryOrganize": "Atur & Halaman",
+    "categoryEdit": "Edit & Optimasi",
+    "categorySecurity": "Keamanan"
   },
   "menu": {
     "file": "File",
@@ -78,7 +128,9 @@
     "edit": "Edit",
     "page": "Halaman",
     "tools": "Alat",
-    "view": "Tampilan"
+    "view": "Tampilan",
+    "minimize": "Perkecil Ribbon",
+    "expand": "Perbesar Ribbon"
   },
   "toolbar": {
     "zoomIn": "Perbesar",
@@ -122,6 +174,10 @@
     "compress": "Kompres PDF",
     "encrypt": "Enkripsi PDF",
     "decrypt": "Dekripsi PDF",
+    "unlockPDF": "Buka Kunci PDF",
+    "webOptimize": "Optimalkan Web",
+    "overlay": "Overlay PDF",
+    "webpageToPdf": "Web ke PDF",
     "watermark": "Tambah Watermark",
     "rotate": "Putar Halaman",
     "delete": "Hapus Halaman",
@@ -131,15 +187,23 @@
     "ocr": "OCR - Ekstrak Teks",
     "convert": "Konversi",
     "exportImages": "Ekspor sebagai Gambar",
+    "extractImages": "Ekstrak Gambar",
     "importImages": "Impor dari Gambar",
     "officeToPdf": "Office ke PDF",
     "bulkEncrypt": "Enkripsi Massal",
     "sign": "Tanda Tangan PDF",
     "viewSignatures": "Lihat Tanda Tangan",
+    "addPageNumbers": "Tambah Nomor Halaman",
     "forms": "Formulir",
     "annotations": "Anotasi",
     "batch": "Operasi Batch",
-    "plugins": "Manajer Plugin"
+    "plugins": "Manajer Plugin",
+    "searchPlaceholder": "Cari alat...",
+    "search": "Cari",
+    "noResults": "Tidak ada alat yang cocok dengan \"{{query}}\"",
+    "requiresDocument": "Buka PDF dulu",
+    "searchHint": "Tekan Ctrl+K untuk membuka pencarian kapan saja",
+    "pdfToWord": "PDF ke Word/Excel"
   },
   "merge": {
     "title": "Gabung PDF",
@@ -184,6 +248,125 @@
     "encryptButton": "Enkripsi PDF",
     "success": "PDF berhasil dienkripsi"
   },
+  "pdfPassword": {
+    "title": "Password Diperlukan",
+    "description": "PDF ini dilindungi password",
+    "password": "Password",
+    "enterPassword": "Masukkan password untuk membuka PDF ini",
+    "open": "Buka PDF",
+    "wrongPassword": "Password salah. Silakan coba lagi."
+  },
+  "unlockPDF": {
+    "title": "Buka Kunci PDF",
+    "description": "Hapus proteksi password dari PDF",
+    "password": "Password PDF",
+    "enterPassword": "Masukkan password PDF",
+    "passwordRequired": "Password diperlukan",
+    "wrongPassword": "Password salah atau PDF tidak terenkripsi",
+    "unlock": "Buka Kunci PDF",
+    "unlocking": "Membuka kunci...",
+    "info": "Ini akan membuat file PDF baru tanpa proteksi password",
+    "warning": "Pastikan Anda memiliki izin untuk membuka kunci PDF ini",
+    "success": "PDF berhasil dibuka kuncinya"
+  },
+  "webOptimize": {
+    "title": "Optimalkan PDF untuk Web",
+    "description": "Kompres dan optimalkan PDF untuk tampilan web",
+    "quality": "Level Kualitas",
+    "screen": "Layar",
+    "screenDesc": "72 DPI - Ukuran terkecil, untuk web",
+    "ebook": "eBook",
+    "ebookDesc": "150 DPI - Seimbang, untuk baca digital",
+    "printer": "Printer",
+    "printerDesc": "300 DPI - Kualitas tinggi untuk cetak",
+    "prepress": "Prepress",
+    "prepressDesc": "300 DPI - Cetak profesional, terbesar",
+    "optimize": "Optimalkan PDF",
+    "optimizing": "Mengoptimalkan...",
+    "info": "Menggunakan Ghostscript untuk kompres gambar dan optimalkan struktur PDF agar lebih cepat dimuat",
+    "success": "PDF berhasil dioptimalkan!",
+    "originalSize": "Ukuran asli",
+    "newSize": "Ukuran baru",
+    "savings": "Berkurang {{percent}}%"
+  },
+  "overlay": {
+    "title": "Overlay PDF",
+    "description": "Overlay satu PDF di atas PDF lain (watermark, kop surat)",
+    "overlayFile": "File PDF Overlay",
+    "selectFile": "Pilih PDF",
+    "noFileSelected": "Tidak ada file dipilih",
+    "noOverlayFile": "Silakan pilih file PDF overlay",
+    "fileHint": "Pilih file PDF untuk overlay (contoh: watermark, kop surat)",
+    "fileHintWithImage": "Mendukung PDF dan gambar (PNG, JPG) untuk overlay",
+    "imagePositionLabel": "Posisi Gambar",
+    "positionTop": "Header",
+    "positionBottom": "Footer",
+    "positionCenter": "Tengah",
+    "positionFull": "Full Halaman",
+    "position": "Posisi Overlay",
+    "foreground": "Depan",
+    "foregroundDesc": "Overlay tampil di atas konten",
+    "background": "Belakang",
+    "backgroundDesc": "Overlay tampil di balik konten",
+    "applyTo": "Terapkan ke Halaman",
+    "allPages": "Semua Halaman",
+    "firstPage": "Halaman Pertama Saja",
+    "lastPage": "Halaman Terakhir Saja",
+    "customPages": "Halaman Tertentu",
+    "opacity": "Opasitas",
+    "info": "PDF overlay akan diskala untuk sesuai dengan setiap halaman",
+    "apply": "Terapkan Overlay",
+    "processing": "Memproses..."
+  },
+  "webpageToPdf": {
+    "title": "Halaman Web ke PDF",
+    "description": "Konversi halaman web apapun ke dokumen PDF",
+    "urlLabel": "URL Website",
+    "urlPlaceholder": "https://contoh.com",
+    "pageSize": "Ukuran Halaman",
+    "orientation": "Orientasi",
+    "portrait": "Potret",
+    "landscape": "Lanskap",
+    "margins": "Margin",
+    "marginsNone": "Tidak Ada",
+    "marginsMinimal": "Minimal",
+    "marginsNormal": "Normal",
+    "includeBackground": "Sertakan grafik dan warna latar belakang",
+    "loading": "Memuat halaman web...",
+    "converting": "Mengonversi ke PDF...",
+    "success": "PDF berhasil dibuat!",
+    "error": "Gagal mengonversi halaman web",
+    "errorEmptyUrl": "Silakan masukkan URL",
+    "convert": "Konversi ke PDF",
+    "info": "Halaman web akan dimuat dan dirender sebelum dikonversi ke PDF. Ini mungkin memakan waktu beberapa detik."
+  },
+  "convertDialog": {
+    "title": "Konversi PDF",
+    "selectFormat": "Pilih format output:",
+    "selectMethod": "Pilih metode konversi:",
+    "quickMethod": "Metode Cepat (Built-in)",
+    "quickMethodDesc": "Hasil dasar, tidak perlu install tambahan",
+    "qualityMethod": "Kualitas Tinggi (LibreOffice)",
+    "qualityMethodDesc": "Hasil profesional dengan tata letak terjaga",
+    "installLibreOffice": "Install LibreOffice",
+    "libreOfficeNotInstalled": "LibreOffice belum terinstall",
+    "note": "Catatan:",
+    "noteQuick": "Metode cepat cocok untuk PDF teks sederhana. Format kompleks mungkin tidak terjaga.",
+    "noteQuality": "LibreOffice memberikan hasil terbaik untuk dokumen dengan layout kompleks.",
+    "convertTo": "Konversi ke {{format}}",
+    "processing": "Memproses...",
+    "success": "Konversi Berhasil!",
+    "successDescQuick": "{{count}} halaman dikonversi ke {{format}}",
+    "successDescQuality": "File berhasil dikonversi ke {{format}}",
+    "download": "Unduh",
+    "openFolder": "Buka Folder",
+    "convertAgain": "Konversi Lagi",
+    "failed": "Konversi Gagal",
+    "tryAgain": "Coba Lagi",
+    "noFile": "Tidak ada PDF yang dipilih",
+    "sendingToLo": "Mengirim ke LibreOffice...",
+    "finished": "Selesai!"
+  },
   "watermark": {
     "title": "Tambah Watermark",
     "description": "Tambah watermark teks atau gambar",
@@ -197,6 +380,45 @@
     "color": "Warna",
     "applyButton": "Terapkan Watermark",
     "success": "Watermark berhasil diterapkan"
+  },
+  "addPageNumbers": {
+    "title": "Tambah Nomor Halaman",
+    "description": "Tambahkan nomor halaman ke PDF Anda",
+    "position": "Posisi",
+    "format": "Format Nomor",
+    "formatNumbers": "Angka",
+    "formatPageOfTotal": "Halaman X dari Y",
+    "formatRoman": "Angka Romawi",
+    "formatLetters": "Huruf",
+    "startNumber": "Nomor Awal",
+    "fontSize": "Ukuran Font",
+    "margin": "Margin",
+    "pageRange": "Rentang Halaman",
+    "allPages": "Semua Halaman",
+    "customRange": "Rentang Kustom",
+    "preview": "Pratinjau",
+    "apply": "Tambah Nomor",
+    "processing": "Menambahkan...",
+    "error": "Gagal menambahkan nomor halaman",
+    "success": "Nomor halaman berhasil ditambahkan"
+  },
+  "extractImages": {
+    "title": "Ekstrak Gambar dari PDF",
+    "description": "Ekstrak semua gambar dari dokumen PDF",
+    "format": "Format Output",
+    "lossless": "Kualitas lossless",
+    "smaller": "Ukuran lebih kecil",
+    "betterQuality": "Kualitas lebih baik",
+    "quality": "Kualitas JPEG",
+    "minSize": "Ukuran Gambar Minimum",
+    "minWidth": "Lebar Min",
+    "minHeight": "Tinggi Min",
+    "minSizeHint": "Hanya ekstrak gambar yang lebih besar dari ukuran ini",
+    "info": "Gambar akan disimpan ke folder Downloads Anda",
+    "extract": "Ekstrak Gambar",
+    "extracting": "Mengekstrak...",
+    "success": "Berhasil mengekstrak {{count}} gambar",
+    "error": "Gagal mengekstrak gambar"
   },
   "ocr": {
     "title": "OCR - Ekstrak Teks",
@@ -419,10 +641,10 @@
     "escape": "Tutup/Batal"
   },
   "print": {
-    "preparing": "Menyiapkan PDF untuk dicetak...",
-    "preparingDescription": "Mohon tunggu sementara kami menyiapkan dokumen Anda",
+    "preparing": "Membuka PDF untuk dicetak...",
+    "preparingDescription": "Mohon tunggu sementara kami membuka PDF di browser Anda",
     "opened": "PDF dibuka di browser",
-    "openedDescription": "Anda sekarang dapat mencetak menggunakan dialog cetak browser (biasanya Ctrl+P)",
+    "openedDescription": "Anda sekarang dapat melihat preview dan mencetak dokumen menggunakan Ctrl+P",
     "failed": "Gagal membuka PDF",
     "failedDescription": "Gagal menyiapkan PDF untuk dicetak"
   },
@@ -575,6 +797,12 @@
         "description": "Gunakan koleksi, tag, dan favorit untuk mengatur perpustakaan PDF kamu dengan efisien."
       }
     }
+  },
+  "updateCheck": {
+    "failed": "Gagal memeriksa pembaruan:\n{{error}}",
+    "available": "Versi baru tersedia!\n\nSaat ini: {{current}}\nTerbaru: {{latest}}\n\nKlik OK untuk mengunduh.",
+    "upToDate": "Anda sudah menggunakan versi terbaru!\n\nVersi: {{current}}",
+    "error": "Kesalahan memeriksa pembaruan:\n{{error}}"
   }
 }
 
